--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
             <a href="#">Twitter</a>
             <a href="#">Instagram</a>
         </div>
+        <P> made by - dev prashant</P>
     </footer>
 
     <script src="scripts.js"></script>
